fixed menu on mobile and z-index

--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -58,6 +58,8 @@
         left:0;
         right: 0;
         margin-top: rem(15px);
+        z-index: $menu-mobile-zIndex;
+        background-color: $bg-color;
       }
 
       li {
